<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BacaActivity1">

        <ImageView
            android:id="@+id/backgroundImageview"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/apaitupernikahadini1"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/apaitupernikahadini2"/>
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/apaitupernikahadini3"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/apaitupernikahandini4"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/picture1"
            app:layout_constraintTop_toBottomOf="@id/tv4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>