<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Baca">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/backgroundImageview"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="230dp"
        android:layout_height="220dp"
        android:src="@drawable/ic_logo_pede"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ib_baca1"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/ic_apa_pernikahan_dini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ib_baca2"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/ic_pubertas_remaja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/tv_baca1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentbaca1"
        app:layout_constraintTop_toBottomOf="@id/ib_baca1"
        app:layout_constraintStart_toStartOf="@id/ib_baca1"
        app:layout_constraintEnd_toEndOf="@id/ib_baca1"
        android:textStyle="bold"
        android:textSize="11sp"/>
    <TextView
        android:id="@+id/tv_baca2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentbaca2"
        app:layout_constraintTop_toBottomOf="@id/ib_baca2"
        app:layout_constraintStart_toStartOf="@id/ib_baca2"
        app:layout_constraintEnd_toEndOf="@id/ib_baca2"
        android:textStyle="bold"
        android:textSize="11sp"/>

    <ImageButton
        android:id="@+id/ib_baca3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_kesehatan_reproduksi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_baca1"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ib_baca4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/ic_bahaya_perilaku_seks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_baca2"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/tv_baca3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentbaca3"
        app:layout_constraintTop_toBottomOf="@id/ib_baca3"
        app:layout_constraintStart_toStartOf="@id/ib_baca3"
        app:layout_constraintEnd_toEndOf="@id/ib_baca3"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="11sp"/>
    <TextView
        android:id="@+id/tv_baca4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentbaca4"
        app:layout_constraintTop_toBottomOf="@id/ib_baca4"
        app:layout_constraintStart_toStartOf="@id/ib_baca4"
        app:layout_constraintEnd_toEndOf="@id/ib_baca4"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="11sp"/>

    <ImageButton
        android:id="@+id/ib_baca5"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_bahaya_pernikahan_dini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_baca3"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/tv_baca5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentbaca5"
        app:layout_constraintTop_toBottomOf="@id/ib_baca5"
        app:layout_constraintStart_toStartOf="@id/ib_baca5"
        app:layout_constraintEnd_toEndOf="@id/ib_baca5"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="11sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>