<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentBaca4">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/backgroundImageview"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/bahayasexbebas1"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/bahayasexbebas2"/>
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="RESIKO SEKS AKTIF PRANIKAH"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/resikoseks1"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/resikoseks2"/>

            <ImageButton
                android:id="@+id/btn_prev"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_prev"
                app:layout_constraintTop_toBottomOf="@id/tv5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>